[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
aws-sdk-s3 = "0.28.0"
aws-config = "0.55.3"
tokio = { version = "1.28.1", features = ["full"] }
anyhow = "1.0.71"
bytes = "1.4.0"
log = "0.4.17"
id3 = "1.7.0"
rand = "0.8.5"
symphonia = { version = "0.5.3", features = ["mp3", "aac", "isomp4", "alac"] }
serde_json = "1.0"
